Variable to configuration file.

--- a/alrd-buildimg.conf
+++ b/alrd-buildimg.conf
@@ -11,4 +11,4 @@ bldapkg=(archrescue-setup armrr arpa genscripts gently-bashrc gently-vim mkinitc
 
 bldisod=~/
 
-# vim: set noet syn=conf:
+# vim: set noet syn=sh:
