--- a/alrd-buildimg.conf
+++ b/alrd-buildimg.conf
@@ -7,7 +7,7 @@ bldpdir=/tmp
 
 bldopkg=(base  abs b43-fwcutter binutils bridge-utils btrfs-progs cdrkit ddrescue dnsmasq dnsutils dos2unix ethtool fbdump fsarchiver git gnu-netcat gptfdisk grub haveged hdparm hwdetect hwinfo intel-ucode iotop irssi links memtest86+ mtools nmap ntp openssh os-prober partclone parted partimage pwgen rfkill rkhunter smartmontools syslinux tcpdump testdisk tmux traceroute transmission-cli tree vim-minimal vim-jellybeans wgetpaste)
 
-bldapkg=(alrd-setup armrr arpa genscripts gently-bashrc gently-vim mkinitcpio-unsquashtmpfs rback trizen vim-colorscheme-pencil-git vim-default-editor vim-pandoc-syntax-git)
+bldapkg=(alrd-setup armrr trizen arpa genscripts gently-bashrc gently-vim mkinitcpio-unsquashtmpfs rback vim-colorscheme-pencil-git vim-default-editor vim-pandoc-syntax-git)
 
 bldisod=~/
 
