chown variable for ISO permission change.

--- a/alrd-buildimg.conf
+++ b/alrd-buildimg.conf
@@ -10,5 +10,6 @@ bldopkg=(base  abs b43-fwcutter binutils bridge-utils btrfs-progs cdrkit ddrescu
 bldapkg=(alrd-setup armrr trizen arpa genscripts gently-bashrc gently-vim mkinitcpio-unsquashtmpfs rback vim-colorscheme-pencil-git vim-default-editor vim-pandoc-syntax-git)
 
 bldisod=~/
+bldchwn=1000:users
 
 # vim: set noet syn=sh:
