--- a/alrd-buildimg.conf
+++ b/alrd-buildimg.conf
@@ -5,6 +5,8 @@ blddist=archrescue
 blddate=$(date +%Y-%m)
 bldpdir=/tmp
 
+bldpcnf=/etc/alrd-buildimg/pacman.conf
+
 bldopkg=(base  abs b43-fwcutter binutils bridge-utils btrfs-progs cdrkit ddrescue dnsmasq dnsutils dos2unix ethtool fbdump fsarchiver git gnu-netcat gptfdisk grub haveged hdparm hwdetect hwinfo intel-ucode iotop irssi links memtest86+ mtools nmap ntp openssh os-prober partclone parted partimage pwgen rfkill rkhunter smartmontools syslinux tcpdump testdisk tmux traceroute transmission-cli tree vim-minimal vim-jellybeans wgetpaste)
 
 bldapkg=(alrd-setup-git armrr-git arpa-git genscripts-git gently-bashrc-git gently-vim-git mkinitcpio-unsquashtmpfs-git rback-git trizen vim-colorscheme-pencil-git vim-default-editor vim-pandoc-syntax-git)
